# Exam_actuariat

./: README.md  pyproject.toml
models/: best_model_xgboost.joblib
notebooks/: 1.prediction-sinistre.ipynb  1_prediction_sinistre.py
scripts/: train.py
scripts/models/: best_model_xgboost.joblib
src/exam_actuariat/: __init__.py  data_loading.py  data_processing.py  evaluation.py  exploration.py  features.py  models.py  visualization.py
tests/: __init__.py  test_simple.py
