[project]
name = "exam-actuariat"
version = "0.1.0"
description = "Package de prédiction de fraude à l'assurance"
authors = [
    {name = "ababacar sagna", email = "ababacarsagna10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core data science
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # Machine Learning
    "scikit-learn>=1.3.0",
    "imbalanced-learn>=0.11.0",
    "joblib>=1.3.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # File handling
    "openpyxl>=3.1.0",
    
    # Development tools
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    
    # Testing
    "pytest>=7.4.0"
]

[tool.poetry]
name = "prediction_sinistre"
packages = [{include = "exam_actuariat", from = "src"}]

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"